# Wordle-GRPO

./: .gitignore  README.md  pyproject.toml
Results/: FINAL-trajectories-for-SFT.json  trajectories.json  words-used.json
Wordle/: .gitignore  __init__.py  cheatsheet.md  roughnote.ipynb  type.py  wordle_env.py  wordle_env_v2.py  wordle_run.py
Wordle/TauBench-GRPO-Code/: grpo_multiturn_trainer.py  taubench_retail.py  taubench_rubric.py  taubenchretail_env.py
Wordle/data/: all_words.py  train.py
Wordle/templates/: system_prompt2.txt
Wordle/trainers/: __init__.py  grpo_config.py  grpo_multiturn_trainer.py
Wordle/utils/: model_utils.py
config/: zero3.yaml  zero_stage3_offload_config.json
wandb/: latest-run  settings
wandb/run-20250701_164235-d7mn1koz/files/: requirements.txt  wandb-metadata.json
wandb/run-20250701_200622-0sq5av99/: run-0sq5av99.wandb
wandb/run-20250701_200622-0sq5av99/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250701_202259-y54e0zfx/files/: wandb-metadata.json
wandb/run-20250701_202259-y54e0zfx/files/media/table/: completions_12_7e4df300deb408dd9119.table.json  completions_20_85dd4072e06eb606fa20.table.json  completions_25_b3ff94e1f08b995b81b2.table.json  completions_33_a053cc590747d9aff2b1.table.json  completions_38_94d1aa57cb2ec3dcf6fe.table.json  completions_46_f316da7d82e237019d7c.table.json  completions_51_153f9ac5825614b477b5.table.json  completions_59_2bcf4462aa7a4585ce50.table.json  completions_64_cb488499a244802c526b.table.json  completions_72_e88c6bc11e9819f2d10e.table.json  completions_77_74fe99cac51677521789.table.json  completions_7_f84afa5135750d5d30a8.table.json  completions_85_b7db106ec0bc7a717236.table.json  completions_90_0b672de0bfd68dd8b836.table.json
