[project]
name = "wordle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "accelerate>=1.8.1",
    "deepspeed>=0.17.1",
    "liger-kernel>=0.5.10",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pyenchant>=3.2.2",
    "sentencepiece>=0.2.0",
    "setuptools>=80.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]
