[project]
name = "wordle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "deepspeed>=0.17.1",
    "liger-kernel>=0.5.10",
    "nltk>=3.9.1",
    "numpy==2.2",
    "peft>=0.15.2",
    "pyenchant>=3.2.2",
    "sentencepiece>=0.2.0",
    "setuptools>=80.9.0",
    "transformers>=4.53.0",
    "trl>=0.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "vllm>=0.9.1"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true